--- a/app/src/main/res/layout/diary_action_list.xml
+++ b/app/src/main/res/layout/diary_action_list.xml
@@ -5,10 +5,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_diary_action" tools:context=".activity.DiaryActionActivity">
 
@@ -49,7 +45,9 @@
             android:layout_weight="2"
             android:text="@string/injection_date_text"
             android:gravity="right"
-            android:textAppearance="@android:style/TextAppearance.Medium" />
+            android:textAppearance="@android:style/TextAppearance.Medium"
+            android:background="@color/primary_gray"
+            android:paddingRight="@dimen/activity_horizontal_margin" />
     </LinearLayout>
 
 
