--- a/app/src/main/res/layout/insulin_glucose_item.xml
+++ b/app/src/main/res/layout/insulin_glucose_item.xml
@@ -16,7 +16,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingRight="@dimen/activity_horizontal_margin">
 
 
         <LinearLayout
@@ -39,7 +40,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="6" />
+                android:text="6"
+                android:textAlignment="textEnd" />
 
         </LinearLayout>
 
@@ -65,7 +67,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:text="8:00" />
+                android:text="8:00"
+                android:textAlignment="textEnd" />
         </LinearLayout>
 
         <LinearLayout
