--- a/app/src/main/res/layout/insulin_inject_item.xml
+++ b/app/src/main/res/layout/insulin_inject_item.xml
@@ -20,7 +20,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingRight="@dimen/activity_horizontal_margin">
 
         <LinearLayout
         android:layout_width="match_parent"
@@ -41,7 +42,8 @@
             style="@android:style/TextAppearance.Medium"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:textAlignment="textEnd" />
     </LinearLayout>
 
         <LinearLayout
@@ -82,7 +84,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:text="8:00" />
+            android:text="8:00"
+            android:textAlignment="textEnd" />
     </LinearLayout>
 
         <LinearLayout
@@ -105,7 +108,8 @@
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:hint="@string/insulin_inject_plan"
-            android:text="..." />
+            android:text="..."
+            android:textAlignment="textEnd" />
     </LinearLayout>
 
 
