--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,10 +6,10 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorControlHighlight">#FF000000</color>
     -->
-    <color name="primary">#3f51b5</color>
-    <color name="primary_gray">#787878</color>
-    <color name="primary_dark">#303f9f</color>
-    <color name="ripple">#F06292</color>
+    <color name="primary">#5C8AC8</color>
+    <color name="primary_gray">#adadad</color>
+    <color name="primary_dark">#0072BB</color>
+    <color name="ripple">#F06292</color>#0072BB
     <color name="accent">#E91E63</color>
     <color name="accent_pressed">#C2185B</color>
 
