--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -17,4 +17,7 @@
     <item android:id="@+id/action_reinitdb" android:title="@string/action_reinitdb"
         android:orderInCategory="100" app:showAsAction="never" />
 
+    <item android:id="@+id/action_about" android:title="@string/action_about"
+        android:orderInCategory="100" app:showAsAction="never" />
+
 </menu>
