--- a/app/src/main/res/layout/diary_glucose_add.xml
+++ b/app/src/main/res/layout/diary_glucose_add.xml
@@ -151,7 +151,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:onClick="cancel"
-                    android:text="@string/button_cancel" />
+                    android:text="@android:string/cancel" />
             </LinearLayout>
 
         </LinearLayout>
