--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,8 @@
     <color name="accent_pressed">#C2185B</color>
 
 
-    <color name="fabButtonNormal">#f8ece2</color>
+    <color name="fabButtonNormal">#e9fff9</color>
+
     <color name="fabButtonPressed">#f3dfcd</color>
 
 
@@ -29,6 +30,14 @@
     <color name="fabMenuColorNormal">#FFB805</color>
     <color name="fabMenuColorPressed">#F2AB00</color>
     <color name="fabMenuColorRipple">#D99200</color>
+
+
+    <item name="transparent" type="color">#00FFFFFF</item>
+    <item name="grey" type="color">#555555</item>
+    <item name="green" type="color">#4499CC00</item>
+    <item name="darkgreen" type="color">#FF669900</item>
+    <color name="a200_orange">#FF6E40</color>
+    <color name="a100_orange">#FF9E80</color>
 
 
 
