--- a/app/src/main/res/layout/diary_action_list.xml
+++ b/app/src/main/res/layout/diary_action_list.xml
@@ -29,25 +29,48 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/textView7"
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/injection_date_label"
-            android:textAppearance="@android:style/TextAppearance.Medium"
-            android:textColor="@color/accent" />
+            android:layout_height="match_parent"
+            android:layout_weight="1">
 
-        <TextView
-            android:id="@+id/tv_diary_actions_date"
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/injection_date_label"
+                android:textAppearance="@android:style/TextAppearance.Medium"
+                android:textColor="@color/accent" />
+
+            <TextView
+                android:id="@+id/tv_diary_actions_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/injection_date_text"
+
+                android:textAppearance="@android:style/TextAppearance.Medium"
+
+                android:paddingRight="@dimen/activity_horizontal_margin" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="2"
-            android:text="@string/injection_date_text"
-            android:gravity="right"
-            android:textAppearance="@android:style/TextAppearance.Medium"
-            android:background="@color/primary_gray"
-            android:paddingRight="@dimen/activity_horizontal_margin" />
+            android:gravity="right">
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageButton"
+                android:src="@android:drawable/ic_menu_month"
+                android:onClick="showDateSelect" />
+        </LinearLayout>
+
     </LinearLayout>
 
 
