--- a/app/src/main/res/layout/diary_action_list.xml
+++ b/app/src/main/res/layout/diary_action_list.xml
@@ -16,13 +16,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView19"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/diary_action_label"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,36 +24,87 @@
 
         <LinearLayout
             android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_weight="1">
 
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/injection_date_label"
-                android:textAppearance="@android:style/TextAppearance.Medium"
-                android:textColor="@color/accent" />
-
-            <TextView
-                android:id="@+id/tv_diary_actions_date"
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/injection_date_text"
+                android:layout_height="wrap_content">
 
-                android:textAppearance="@android:style/TextAppearance.Medium"
+                <TextView
+                    android:id="@+id/textView19"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/diary_action_label"
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
 
-                android:paddingRight="@dimen/activity_horizontal_margin" />
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/action_date_label"
+                    android:textAppearance="@android:style/TextAppearance.Medium"
+                    android:textColor="@color/accent"
+                    android:gravity="center"
+                    android:layout_weight="1" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/tv_diary_actions_date_from_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/action_date_label_from"
+
+                    android:textAppearance="@android:style/TextAppearance.Medium"
+
+                    android:paddingRight="@dimen/activity_horizontal_margin" />
+
+                <TextView
+                    android:id="@+id/tv_diary_actions_date_from"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/action_date_text"
+
+                    android:textAppearance="@android:style/TextAppearance.Medium"
+
+                    android:paddingRight="@dimen/activity_horizontal_margin"
+                    android:gravity="right" />
+
+                <TextView
+                    android:id="@+id/tv_diary_actions_date_into_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/action_date_label_into"
+
+                    android:textAppearance="@android:style/TextAppearance.Medium"
+
+                    android:paddingRight="@dimen/activity_horizontal_margin" />
+
+                <TextView
+                    android:id="@+id/tv_diary_actions_date_into"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/action_date_text"
+
+                    android:textAppearance="@android:style/TextAppearance.Medium"
+
+                    android:paddingRight="@dimen/activity_horizontal_margin"
+                    android:gravity="right" />
+            </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="2"
             android:gravity="right">
 
             <ImageButton
