--- a/app/src/main/res/layout/activity_diary_action.xml
+++ b/app/src/main/res/layout/activity_diary_action.xml
@@ -16,7 +16,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/diary_action_list" />
+    <include layout="@layout/content_diary_action" />
 
     <!--android.support.design.widget.FloatingActionButton android:id="@+id/fab_menu_action"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
@@ -65,6 +65,15 @@
             fab:fab_colorNormal="@color/fabButtonNormal"
             fab:fab_size="mini"
             fab:fab_label="@string/menu_event_add_eating" />
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fab_pressure"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/menu_heartbeat"
+            fab:fab_colorNormal="@color/fabButtonNormal"
+            fab:fab_size="mini"
+            fab:fab_label="@string/menu_event_add_pressure" />
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/fab_glucose"
