--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,23 +1,68 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainActivity">
 
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item
+        android:id="@+id/action_settings"
+        android:orderInCategory="100"
+        android:title="@string/action_settings"
+        app:showAsAction="never" />
 
-    <item android:id="@+id/action_insulins" android:title="@string/action_insulins"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item
+        android:id="@+id/action_insulins"
+        android:orderInCategory="100"
+        android:title="@string/action_insulins"
+        app:showAsAction="never" />
 
     <!--item android:id="@+id/action_injections" android:title="@string/action_injections"
         android:orderInCategory="100" app:showAsAction="never" /-->
 
-    <item android:id="@+id/action_graph" android:title="@string/action_graph"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item
+        android:id="@+id/action_graph"
+        android:orderInCategory="100"
+        android:title="@string/action_graph"
+        app:showAsAction="never" />
 
-    <item android:id="@+id/action_reinitdb" android:title="@string/action_reinitdb"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item
+        android:id="@+id/action_database"
+        android:orderInCategory="100"
+        android:title="@string/action_database"
+        app:showAsAction="never"/>
 
-    <item android:id="@+id/action_about" android:title="@string/action_about"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <!--item
+        android:id="@+id/action_database_menu"
+        android:orderInCategory="100"
+        android:title="@string/action_database"
+        app:showAsAction="never">
+
+        <menu>
+
+            <item
+                android:id="@+id/action_db_import"
+                android:orderInCategory="100"
+                android:title="@string/action_db_import"
+                app:showAsAction="never" />
+
+            <item
+                android:id="@+id/action_db_export"
+                android:orderInCategory="100"
+                android:title="@string/action_db_export"
+                app:showAsAction="never" />
+
+            <item
+                android:id="@+id/action_db_reinit"
+                android:orderInCategory="100"
+                android:title="@string/action_db_reinit"
+                app:showAsAction="never" />
+
+        </menu>
+    </item-->
+
+    <item
+        android:id="@+id/action_about"
+        android:orderInCategory="100"
+        android:title="@string/action_about"
+        app:showAsAction="never" />
 
 </menu>
