--- a/app/src/main/res/layout/diary_pressure_add.xml
+++ b/app/src/main/res/layout/diary_pressure_add.xml
@@ -142,11 +142,11 @@
                 android:textColor="@color/accent" />
 
             <Spinner
-                android:id="@+id/sp_when"
+                android:id="@+id/sp_note"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:entries="@array/dialog_when_list" />
+                android:entries="@array/dialog_notes_list" />
 
             <TextView
                 android:id="@+id/textView29"
