--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -15,28 +15,28 @@
     <string name="insulin_inject_type_non">Not set</string>
 
 
-    <string name="dialog_when_type_1">Before breakfast</string>
-    <string name="dialog_when_type_2">After breakfast</string>
-    <string name="dialog_when_type_3">Before lunch</string>
-    <string name="dialog_when_type_4">After lunch</string>
-    <string name="dialog_when_type_5">Before dinner</string>
-    <string name="dialog_when_type_6">After dinner</string>
-    <string name="dialog_when_type_7">General</string>
-    <string name="dialog_when_type_8">Recheck</string>
-    <string name="dialog_when_type_9">Night</string>
-    <string name="dialog_when_type_10">Other</string>
+    <string name="dialog_note_type_1">Before breakfast</string>
+    <string name="dialog_note_type_2">After breakfast</string>
+    <string name="dialog_note_type_3">Before lunch</string>
+    <string name="dialog_note_type_4">After lunch</string>
+    <string name="dialog_note_type_5">Before dinner</string>
+    <string name="dialog_note_type_6">After dinner</string>
+    <string name="dialog_note_type_7">General</string>
+    <string name="dialog_note_type_8">Recheck</string>
+    <string name="dialog_note_type_9">Night</string>
+    <string name="dialog_note_type_10">Other</string>
 
-    <string-array name="dialog_when_list" translatable="false">
-        <item>@string/dialog_when_type_1</item>
-        <item>@string/dialog_when_type_2</item>
-        <item>@string/dialog_when_type_3</item>
-        <item>@string/dialog_when_type_4</item>
-        <item>@string/dialog_when_type_5</item>
-        <item>@string/dialog_when_type_6</item>
-        <item>@string/dialog_when_type_7</item>
-        <item>@string/dialog_when_type_8</item>
-        <item>@string/dialog_when_type_9</item>
-        <item>@string/dialog_when_type_10</item>
+    <string-array name="dialog_notes_list" translatable="false">
+        <item>@string/dialog_note_type_1</item>
+        <item>@string/dialog_note_type_2</item>
+        <item>@string/dialog_note_type_3</item>
+        <item>@string/dialog_note_type_4</item>
+        <item>@string/dialog_note_type_5</item>
+        <item>@string/dialog_note_type_6</item>
+        <item>@string/dialog_note_type_7</item>
+        <item>@string/dialog_note_type_8</item>
+        <item>@string/dialog_note_type_9</item>
+        <item>@string/dialog_note_type_10</item>
     </string-array>
 
     <string name="dialog_period_list_1">Day</string>
