--- a/app/src/main/res/layout/insulin_glucose_item.xml
+++ b/app/src/main/res/layout/insulin_glucose_item.xml
@@ -33,9 +33,9 @@
                 <TextView
                     android:id="@+id/textView"
                     style="@android:style/TextAppearance.Medium"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+
                     android:text="@string/glucose_label_title"
                     android:textStyle="bold" />
 
@@ -47,6 +47,15 @@
                     android:layout_weight="1"
                     android:text="6"
                     android:textAlignment="textEnd" />
+
+                <TextView
+                    android:id="@+id/tv_glucose_unit"
+                    style="@android:style/TextAppearance.Medium"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/glucoce_label_unit"
+                    android:gravity="right" />
 
             </LinearLayout>
 
@@ -88,7 +97,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:singleLine="true"
-                    android:hint="@string/insulin_inject_comm"
+                    android:hint="@string/action_comment"
                     android:text="..." />
 
                 <TextView
@@ -98,7 +107,7 @@
                     android:layout_height="match_parent"
                     android:singleLine="true"
                     android:layout_weight="1"
-                    android:hint="@string/insulin_inject_comm"
+                    android:hint="@string/action_comment"
                     android:text="..." />
 
             </LinearLayout>
