--- a/app/src/main/res/layout/insulin_inject_item.xml
+++ b/app/src/main/res/layout/insulin_inject_item.xml
@@ -99,7 +99,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:hint="@string/insulin_inject_comm"
+            android:hint="@string/action_comment"
             android:text="..." />
         <TextView
             android:id="@+id/tv_planned"
