--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     -->
     <color name="primary">#5C8AC8</color>
     <color name="primary_gray">#adadad</color>
+    <color name="primary_lgray">#adad00</color>
     <color name="primary_dark">#0072BB</color>
     <color name="ripple">#F06292</color>#0072BB
     <color name="accent">#E91E63</color>
