--- a/app/src/main/res/layout/content_diary_action.xml
+++ b/app/src/main/res/layout/content_diary_action.xml
@@ -127,6 +127,28 @@
                 android:textAppearance="@android:style/TextAppearance.Medium" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView18"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/average_glucose_label"
+                android:textAppearance="@android:style/TextAppearance.Medium" />
+
+            <TextView
+                android:id="@+id/tv_average_glucose_value"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:text="@string/tv_average_glucose_value"
+                android:textAppearance="@android:style/TextAppearance.Medium" />
+        </LinearLayout>
+
 
     </LinearLayout>
 </RelativeLayout>
