--- a/app/src/main/res/layout/item_blood_pressure.xml
+++ b/app/src/main/res/layout/item_blood_pressure.xml
@@ -97,7 +97,7 @@
                     android:layout_weight="1"
                     android:ems="10"
                     android:text="8:00"
-                    android:textAlignment="textEnd" />
+                    android:gravity="right" />
             </LinearLayout>
 
             <LinearLayout
