--- a/app/src/main/res/layout/diary_inject_add.xml
+++ b/app/src/main/res/layout/diary_inject_add.xml
@@ -29,7 +29,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -64,6 +65,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number" />
+
             <TextView
                 android:id="@+id/textView41"
                 style="@android:style/TextAppearance.Medium"
@@ -72,6 +74,7 @@
                 android:text="@string/insulin_inject_label_type"
                 android:textColor="@color/accent"
                 android:textStyle="bold" />
+
             <Spinner
                 android:id="@+id/sp_inject_type"
                 android:layout_width="match_parent"
@@ -181,30 +184,32 @@
             </LinearLayout>
 
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <Button
-                    android:id="@+id/bt_add_update"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:onClick="add_update"
-                    android:text="@string/button_add" />
-
-                <Button
-                    android:id="@+id/bt_cancel"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:onClick="cancel"
-                    android:text="@string/button_cancel" />
-            </LinearLayout>
-
         </LinearLayout>
 
+
     </ScrollView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/bt_add_update"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="add_update"
+            android:text="@string/button_add" />
+
+        <Button
+            android:id="@+id/bt_cancel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="cancel"
+            android:text="@string/button_cancel" />
+    </LinearLayout>
+
 
 </LinearLayout>
