--- a/app/src/main/res/layout/insulin_desc_add.xml
+++ b/app/src/main/res/layout/insulin_desc_add.xml
@@ -307,7 +307,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:onClick="add_update"
+                        android:onClick="confirm"
                         android:text="@string/button_add" />
 
                     <Button
