--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -7,7 +7,7 @@
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <!--style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" /-->
 
 
     <style name="FloatingActionButton" parent="android:Widget.Material.Button">
