add product menu items saving

--- a/app/src/main/res/layout/activity_prod_item_add.xml
+++ b/app/src/main/res/layout/activity_prod_item_add.xml
@@ -60,7 +60,7 @@
                 android:textColor="@color/accent" />
 
             <EditText
-                android:id="@+id/et_weight"
+                android:id="@+id/et_prod_weight"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
